# mat-os

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  GNUmakefile  README.md  build-iso.sh  build.sh  build_iso.sh  compile_flags.txt  debug.sh  gen-font.py  grub.cfg  limine.cfg  qemu.txt  run.sh  setup.sh
.github/workflows/: build.yml
cmake/: mat-os.cmake
kernel/: CMakeLists.txt  allocator.cpp  allocator.hpp  cxa.cpp  font.hpp  idt.cpp  idt.hpp  intrinsics.hpp  kernel.c  kernel.cpp  linker.ld  log.hpp  modules.cpp  modules.hpp  paging.cpp  paging.hpp  serial.cpp  serial.hpp  types.cpp  virtual_allocator.cpp
kernel/assets/: font.qoi  mouse.qoi
kernel/device/: keyboard.cpp  mouse.cpp  pic.cpp  pic.hpp  pit.cpp  pit.hpp  ps2.cpp  ps2.hpp
kernel/memory/: address.cpp  allocator.hpp  heap_alloc.cpp  page_entry.cpp  paging.cpp  paging.hpp  physical_alloc.cpp  virtual_alloc.cpp
kernel/ps2/: controller.cpp  controller.hpp
kernel/screen/: canvas.cpp  canvas.hpp  framebuffer.cpp  framebuffer.hpp  terminal.cpp  terminal.hpp  terminal_font.hpp  window_manager.cpp  window_manager.hpp  windows.cpp  windows.hpp
kernel/screen/window/: context.cpp  manager.cpp  manager.hpp  window.cpp  window.hpp  window_manager.cpp
kernel/tasks/: scheduler.cpp  scheduler.hpp
kernel/terminal/: terminal.cpp  terminal.hpp  window.cpp  window.hpp
kernel/window/: button.cpp  context.cpp  context.hpp  font.cpp  font.hpp  manager.cpp  manager.hpp  qoi.cpp  qoi.hpp  theme.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
src/: alloc.cpp  alloc.hpp  assembler.cpp  assembler.hpp  common.cpp  common.hpp  types.hpp
src/kernel/: boot.asm  cxa.cpp  exception-table.asm  filesystem.cpp  filesystem.hpp  font8x8_basic.h  gdt.asm  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  kernel.cpp  kernel.h  kernel.hpp  keyboard.cpp  keyboard.hpp  log.hpp  mouse.cpp  mouse.hpp  paging.cpp  paging.hpp  pic.cpp  pic.hpp  pit.cpp  pit.hpp  ps2.hpp  screen.cpp  screen.hpp  serial.cpp  serial.hpp  shell.cpp  stdio.cpp  stdio.hpp  terminal-font.hpp  terminal.cpp  terminal.hpp
src/lib/: array.hpp  format.hpp  function.hpp  hash-containers.hpp  hash.hpp  iterator.hpp  limits.hpp  math.hpp  optional.hpp  pointer.hpp  result.hpp  stl.hpp  string-utils.hpp  string.hpp  template-utils.hpp  tuple.hpp  utils.hpp  variant.hpp  vector.hpp
stl/: CMakeLists.txt  array.hpp  format.cpp  format.hpp  iterator.hpp  math.hpp  memory.cpp  memory.hpp  pointer.hpp  random.cpp  random.hpp  span.hpp  stl.hpp  string.cpp  string.hpp  types.hpp  units.cpp  units.hpp  utils.hpp  vector.hpp
test/: masm.cpp  masm.sh  run.sh  test.cpp  test.hpp
